# project-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  swagger-coverage-config-{{ cookiecutter.project_slug }}.json  telegram-notifier-config.ini
{{cookiecutter.project_name}}/.github/workflows/: python.yml
{{cookiecutter.project_name}}/config/: prod.yaml  stg.yaml
